--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ title                    : "JinnnyBlog"
 title_separator          : "-"
 name                     : "YANG EUN JIN"
 description              : "An amazing website."
-url                      : "https://jinnnyblog.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : "https://jinnny.github.io"
+baseurl                  : "/blog" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
