--- a/_config.yml
+++ b/_config.yml
@@ -290,3 +290,9 @@ defaults:
       comments: true
       share: true
       related: true
+#  - scope:
+#      path: ""
+#      type: docs
+#      values:
+#        sidebar:
+#          nav: "docs"
