--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,3 +8,15 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+#docs:
+#- title: Lists
+#  children:
+#  - title: "Quick-Start Guide"
+#    url: /docs/quick-start-guide/
+#  - title: "Structure"
+#    url: /docs/structure/
+#  - title: "Installation"
+#    url: /docs/installation/
+#  - title: "Upgrading"
+#    url: /docs/upgrading/
+
