--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ staticman:
     email                : # "md5"
   generatedFields:
     date:
-      type               : # "date"
+      type               : "date"
       options:
         format           : # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
   endpoint               : # URL of your own deployment with trailing slash, will fallback to the public instance
@@ -106,11 +106,10 @@ author:
   name             : "Yang eun jin"
   avatar           : "/assets/images/photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "UI Developer"
-  location         : "Seoul"
-  email            : "jinny920311@gmail.com"
+  location         : "Seoul, Korea"
   links:
     - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
+      icon: "fas fa-fw fa-envelope"
       url: mailto:jinny920311@gmail.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
@@ -286,7 +285,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      read_time: false
       comments: true
       share: true
       related: true
@@ -296,3 +295,10 @@ defaults:
 #      values:
 #        sidebar:
 #          nav: "docs"
+
+#  - scope:
+#      path: "_pages"
+#      type: pages
+#      values:
+#        layout: single
+#        author_profile: true
