--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ name                     : "YANG EUN JIN"
 description              : "An amazing website."
 url                      : "https://jinnny.github.io"
 baseurl                  : "/blog" # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "jinnny/blog"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-# breadcrumbs            : false # true, false (default)
+breadcrumbs              : # true, false (default)
 words_per_minute         : 200
 comments:
   provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "staticman_v2", "utterances", "custom"
@@ -52,7 +52,7 @@ staticman:
     email                : # "md5"
   generatedFields:
     date:
-      type               : "date"
+      type               : # "date"
       options:
         format           : # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
   endpoint               : # URL of your own deployment with trailing slash, will fallback to the public instance
@@ -73,7 +73,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification :
+google_site_verification : "UKTWH5A8q6Fz6XSvmM2Ptj9OzIvP1UpuBhC_GdtV3g"
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
@@ -95,10 +95,10 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "custom"
+  provider               : "google" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
-    anonymize_ip         : # true, false (default)
+    tracking_id          : "UA-135034014-2"
+    anonymize_ip         : true
 
 
 # Site Author
@@ -207,6 +207,16 @@ kramdown:
   enable_coderay: false
 
 
+# Collections
+collections:
+  docs:
+    output: true
+    permalink: /:collection/:path/
+  post:
+    output: true
+    permalink: /:collection/:path/
+
+
 # Sass/SCSS
 sass:
   sass_dir: _sass
@@ -217,7 +227,7 @@ sass:
 permalink: /:categories/:title/
 paginate: 10 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Asia/Seoul
 
 
 # Plugins (previously gems:)
@@ -296,9 +306,10 @@ defaults:
 #        sidebar:
 #          nav: "docs"
 
-#  - scope:
-#      path: "_pages"
-#      type: pages
-#      values:
-#        layout: single
-#        author_profile: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
